--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @issue %>
+<%= render 'issue', issue: @issue %>
 
 <div>
   <%= link_to "Edit this issue", edit_issue_path(@issue) %> |
