--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -197,15 +197,9 @@
         <tbody>
           <% @issues.each do |issue| %>
             <tr>
-              <td style="width: 12%; text-align: center;">
-                <%= issue.issue_type.name %>
-              </td>
-              <td style="width: 12%; text-align: center;">
-                <%= issue.issue_severity.name %>
-              </td>
-              <td style="width: 12%; text-align: center;">
-                <%= issue.issue_priority.name %>
-              </td>
+              <td style="width: 12%; text-align: center;"><%= issue.issue_type.name %></td>
+              <td style="width: 12%; text-align: center;"><%= issue.issue_severity.name %></td>
+              <td style="width: 12%; text-align: center;"><%= issue.issue_priority.name %></td>
               <td style="width: 50%; text-align: left; cursor: pointer;" onclick="window.location='<%= issue_path(issue) %>'">
                 <span class="issue-id">#<%= issue.id %></span>
                 <span class="issue-title"><%= issue.subject %></span>
