--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -5,6 +5,11 @@
 
   <div class="custom-btn-container">
     <%= link_to '<span class="plus-sign">+</span> NEW ISSUE'.html_safe, new_issue_path, class: 'custom-btn' %>
+
+    <%= link_to new_issue_path, class: 'issues-menu-button' do %>
+      <i class="fas fa-plus"></i>
+      <i class="fas fa-bars"></i>
+    <% end %>
   </div>
 
   <% if @issues.any? %>
