--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -619,7 +619,17 @@ nav a {
   .plus-sign {
     font-size: 25px;
     font-weight: 500;
-    margin-right: 8px;
+    margin-right: 5px;
+    display: inline-block;
+    position: relative;
+    top: 1px;
+    display: inline-block;
+  }
+
+  .gear-sign {
+    font-size: 20px;
+    font-weight: 500;
+    margin-right: 5px;
     display: inline-block;
     position: relative;
     top: 1px;
