--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -1,17 +1,19 @@
 <div class="container-fluid mt-4">
-    <p style="color: green"><%#= notice %></p>
+  <p style="color: green"><%#= notice %></p>
 
   <h1 class="mb-4" style="color: #0085A1; font-family: 'Arial', sans-serif; font-weight: bold;">Issues</h1>
 
   <div class="custom-btn-container">
-  <%= link_to '<span class="gear-sign">⚙️</span> SETTINGS'.html_safe, settings_path, class: 'custom-btn' %>
-  <%= link_to '<span class="plus-sign">+</span> NEW ISSUE'.html_safe, new_issue_path, class: 'custom-btn' %>
+      <%= link_to '<i class="fas fa-sliders-h"></i> Filters'.html_safe, '#', class: 'custom-btn filter-btn' %>
+      <input type="text" placeholder="Search issues..." class="search-bar" />
+      <%= link_to '<span class="gear-sign">⚙️</span> SETTINGS'.html_safe, settings_path, class: 'custom-btn' %>
+      <%= link_to '<span class="plus-sign">+</span> NEW ISSUE'.html_safe, new_issue_path, class: 'custom-btn' %>
 
-  <%= link_to new_issue_path, class: 'issues-menu-button' do %>
-    <i class="fas fa-plus"></i>
-    <i class="fas fa-bars"></i>
-  <% end %>
-</div>
+      <%= link_to new_issue_path, class: 'issues-menu-button' do %>
+        <i class="fas fa-plus"></i>
+        <i class="fas fa-bars"></i>
+      <% end %>
+  </div>
 </div>
 
   <% if @issues.any? %>
