--- a/app/views/issues/_issue.html.erb
+++ b/app/views/issues/_issue.html.erb
@@ -31,7 +31,7 @@
       <div class="custom-select-box">
         <div class="select-container">
           <span class="select-label">State:</span>
-          <span class="custom-select"><%= issue.issue_status.name %></span>
+          <span class="custom-select"><%= issue.status.name %></span>
         </div>
       </div>
 
@@ -45,14 +45,14 @@
       <div class="custom-select-box">
         <div class="select-container">
           <span class="select-label">Severity:</span>
-          <span class="custom-select"><%= issue.issue_severity.name %></span>
+          <span class="custom-select"><%= issue.severity.name %></span>
         </div>
       </div>
 
       <div class="custom-select-box">
         <div class="select-container">
           <span class="select-label">Priority:</span>
-          <span class="custom-select"><%= issue.issue_priority.name %></span>
+          <span class="custom-select"><%= issue.priority.name %></span>
         </div>
       </div>
 
