--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -32,13 +32,13 @@
       <table class="table table-striped w-100">
         <thead class="thead-light text-right">
           <tr>
-            <th style="width: 12%;">TYPE</th>
-            <th style="width: 12%;">SEVERITY</th>
-            <th style="width: 12%;">PRIORITY</th>
-            <th class="issue-column">ISSUE</th>
-            <th style="width: 12%;">STATUS</th>
-            <th style="width: 14%;">MODIFIED</th>
-            <th style="width: 16%;">ASSIGN TO</th>
+            <th style="width: 12%;">TYPE <span class="sort-icon"><i class="fas fa-sort"></i></span></th>
+            <th style="width: 12%;">SEVERITY <span class="sort-icon"><i class="fas fa-sort"></i></span></th>
+            <th style="width: 12%;">PRIORITY <span class="sort-icon"><i class="fas fa-sort"></i></span></th>
+            <th class="issue-column">ISSUE <span class="sort-icon"><i class="fas fa-sort"></i></span></th>
+            <th style="width: 12%;">STATUS <span class="sort-icon"><i class="fas fa-sort"></i></span></th>
+            <th style="width: 14%;">MODIFIED <span class="sort-icon"><i class="fas fa-sort"></i></span></th>
+            <th style="width: 16%;">ASSIGN TO <span class="sort-icon"><i class="fas fa-sort"></i></span></th>
           </tr>
         </thead>
         <tbody>
