--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -1,10 +1,11 @@
-<p style="color: green"><%= notice %></p>
 
 <%= render 'issue', issue: @issue %>
 
-<div>
-  <%= link_to "Edit this issue", edit_issue_path(@issue) %> |
-  <%= link_to "Back to issues", issues_path %>
-
-  <%= button_to "Destroy this issue", @issue, method: :delete %>
+<div class="navigation-buttons">
+  <%= link_to issues_path, class: "back-button" do %>
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#0085A1" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M19 12H5M12 19l-7-7 7-7"></path>
+    </svg>
+    <span>Volver a issues</span>
+  <% end %>
 </div>
